update community website link

--- a/bedrock/mozorg/templates/mozorg/contact/communities/indonesia.html
+++ b/bedrock/mozorg/templates/mozorg/contact/communities/indonesia.html
@@ -14,7 +14,7 @@
         <h2>{{ _('Indonesia') }}</h2>
 
         <ul class="extra">
-          <li><a href="http://www.mozilla.web.id" class="website">www.mozilla.web.id</a></li>
+          <li><a href="http://www.mozilla.or.id" class="website">www.mozilla.or.id</a></li>
           <li><a href="https://lists.mozilla.org/admin/community-indonesia" class="email">{{ _('Mailing list') }}</a></li>
           <li><a href="https://twitter.com/ID_Mozilla" class="twitter">@ID_Mozilla</a></li>
           <li><a href="https://www.facebook.com/MozillaIndonesia" class="facebook">Facebook</a></li>
