[bug 1221303] Update pixel campaign id's on /firefox/os/2.5/

--- a/bedrock/firefox/templates/firefox/os/ver/2.5.html
+++ b/bedrock/firefox/templates/firefox/os/ver/2.5.html
@@ -13,9 +13,9 @@
 {% block hero_copy %}
   <div class="hero-content">
     <h1>{{ _('Experience Firefox OS on your Android device')}}</h1>
-    <p>{{_('Introducing Firefox OS 2.5 Developer Preview, an experimental app that lets you to use Firefox OS on your Android device.')}}</p>
+    <p>{{_('Introducing Firefox OS 2.5 Developer Preview, an experimental app that lets you use Firefox OS on your Android device.')}}</p>
     <div class="primary-cta">
-      <a href="https://d2yw7jilxa8093.cloudfront.net/B2GDroid-mozilla-central-nightly-latest.apk" class="cta-button">{{_('Get the Android App')}}</a>
+      <a href="https://d2yw7jilxa8093.cloudfront.net/B2GDroid-mozilla-central-nightly-latest.apk" class="cta-button" data-id="Mozilla_B2G_Activity_Tag_1">{{_('Get the Android App')}}</a>
     </div>
   </div>
   <div class="hero-image">
@@ -53,7 +53,7 @@
   <section class="fxos-hub">
     <div class="content-wrapper">
       <div class="hub-container">
-        <h2>{{_('Visit the Participation Hub')}}</h2> 
+        <h2>{{_('Visit the Participation Hub')}}</h2>
         <p>{{_('Want to make Firefox OS even better? Get all the resources, tools and documentation you need from the Participation Hub.')}}</p>
         <p><a class="more" rel="external" href="https://firefoxos.mozilla.community">{{_('Check it out')}}</a></p>
       </div>
@@ -64,7 +64,7 @@
   </section>
 {% endblock %}
 
-{% block fxox_mdn %} 
+{% block fxox_mdn %}
   <section class="fxos-mdn">
     <div class="content-wrapper">
       <div class="mdn-container">
@@ -90,7 +90,7 @@
     <div class="content-wrapper">
       <h2>{{_('Ready to try Firefox OS 2.5 Developer Preview on your Android device?')}}</h2>
       <div class="primary-cta">
-        <a href="https://d2yw7jilxa8093.cloudfront.net/B2GDroid-mozilla-central-nightly-latest.apk" class="cta-button">{{_('Get the Android App')}}</a>
+        <a href="https://d2yw7jilxa8093.cloudfront.net/B2GDroid-mozilla-central-nightly-latest.apk" class="cta-button" data-id="Mozilla_B2G_Activity_Tag_2">{{_('Get the Android App')}}</a>
         <p>{{_('Want the full Firefox OS 2.5 experience?')}} <a href="https://firefoxos.mozilla.community/devices/" class="more" rel="external">{{_('Flash your phone')}}</a></p>
       </div>
     </div>
