fix bug 1224103 - correct iOS product page text alignment for Japanese
add ja-locale specific rule to media/css/firefox/ios.less

--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -856,3 +856,10 @@ a.go {
         .background-size(210px 290px);
     }
 }
+
+// Bug 1224103
+html[lang=ja] {
+    #privacy ul p {
+        text-align: left;
+    }
+}
