Fix Bug 1223211 - https://www.mozilla.org/en-US/about/governance/policies/commit/ add information on how to create a public key

--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/commit.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/commit.html
@@ -38,7 +38,13 @@
       <li>{{ _('If you need access to particular trees on the exceptions list, list them') }}</li>
     </ul>
   </li>
-  <li>{{ _('Attach your SSH <em>public</em> key to the bug - a file with extension ".pub". (Please mark it as <code>text/plain</code> when attaching it!)') }}</li>
+  <li>{{ _('Attach your SSH <em>public</em> key to the bug - a file with extension ".pub". (Please mark it as <code>text/plain</code> when attaching it!)') }}
+    <ul>
+      <li>{% trans policy='https://help.github.com/articles/generating-ssh-keys/' %}
+      GitHub has a <a href="{{ tutorial }}">useful tutorial on generating SSH keys</a>.
+      {% endtrans %}</li>
+    </ul>
+  </li>
   <li>{% trans requirements=url('mozorg.about.governance.policies.commit.requirements') %}
     Make sure you are happy with the <a href="{{ requirements }}">Commit Access Requirements</a>.
   {% endtrans %}</li>
