--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -1066,6 +1066,47 @@ html[lang|="en"] {
 
 
 /****************************************************************************/
+// End of year fundraising
+.promo-large-landscape.fundraiser {
+    background-color: #e63d2f;
+    color: #fff;
+
+    h2 {
+        padding-top: 30px;
+        .font-size(32px);
+    }
+
+    h2:before {
+        display: block;
+        content: '';
+        background: transparent url('/media/img/home/voices/promos/fundraising/fox.svg') 0 0 no-repeat;
+        background-size: 134px 115px;
+        margin: 0 auto;
+        width: 134px;
+        height: 115px;
+    }
+
+    h3 {
+        padding-top: 90px;
+    }
+
+    .secondary {
+        background: #f89c24 url('/media/img/home/voices/promos/fundraising/background.svg') 0 0 no-repeat;
+        background-size: 620px 300px;
+        color: #fff;
+
+        @media only screen and (max-width: (@widthSquareGrid_6 - 1)) {
+            background-image: none;
+        }
+
+        p.more {
+            .font-size(21px);
+        }
+    }
+}
+
+
+/****************************************************************************/
 // MDN 10th Anniversary
 .promo-large-landscape.mdn-10-years {
     background: #00659a; // dark blue
