Removes period from after Dec on eoy homepage promo

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -297,7 +297,7 @@
           <h2 class="primary go">{{ _('Donate to Mozilla,<br> the non-profit behind Firefox.') }}</h2>
           <a class="panel-link" href="{{ donate_url('promotile') }}" data-promotion-id="promo-11" data-promotion-name="End of year fundraising" data-promotion-class="promo-large-landscape" data-promotion-type="tile">
             <div class="secondary">
-              <h3>{{ _('Our year-end<br> fundraiser ends Dec. 31.') }}</h3>
+              <h3>{{ _('Our year-end<br> fundraiser ends Dec 31.') }}</h3>
               <p class="more">{{ _('Donate now') }}</p>
             </div>
           </a>
