--- a/bedrock/firefox/templates/firefox/desktop/trust.html
+++ b/bedrock/firefox/templates/firefox/desktop/trust.html
@@ -48,7 +48,7 @@
       </p>
 
       <ul class="feature-list">
-        {% if l10n_has_tag('tracking_protection') and waffle.switch('tracking-protection') %}
+        {% if l10n_has_tag('tracking_protection') %}
           <li id="privacy-browsing">
             <h3>{{ _('Private Browsing with<br> Tracking Protection') }}</h3>
 
@@ -56,7 +56,7 @@
               {{ _('Browse without having your history, searches or cookies saved, and block hidden third parties from following you across the Web.') }}
             </p>
 
-            <a class="more" rel="external" data-interaction="outbound link" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info">{{ _('Learn more about Private Browsing') }}</a>
+            <a class="more" href="{{ url('firefox.private-browsing') }}">{{ _('Learn more about Private Browsing') }}</a>
           </li>
         {% else %}
           <li id="privacy-browsing">
