--- a/bedrock/teach/templates/teach/smarton/tracking.html
+++ b/bedrock/teach/templates/teach/smarton/tracking.html
@@ -6,7 +6,7 @@
 
 {% block page_title %}{{ _('Get smart on tracking') }}{% endblock %}
 {% block page_desc %}{{ _('What you do online is your business, and you can keep it that way. Get smart on tracking.') }}{% endblock %}
-{% block page_image %}{{ static('img/teach/smarton/tracking/tracking-hero-high-res.png') }}{% endblock %}
+{% block page_image %}{{ static('img/teach/smarton/tracking/tracking-hero-white.jpg') }}{% endblock %}
 
 {% block optimizely %}
   {% if waffle.switch('smarton-tracking-optimizely') %}
@@ -61,19 +61,14 @@
       <figure class="video">
         <div class="video-wrap">
           <p class="video-frame">
-            <a class="video-open" href="https://donottrack-doc.com/" title="{{ _('Watch the documentary at donottrack-doc.com.') }}" data-element-id="video-donottrack" data-embed-src="https://episode1.donottrack-doc.com/embed/mozilla">
+            <a class="video-open" href="https://episode1.donottrack-doc.com/" title="{{ _('Watch the documentary at donottrack-doc.com.') }}" target="_blank">
               {{ high_res_img('teach/smarton/tracking/donottrackdoc-poster.jpg', {'alt': _('Watch the documentary at donottrack-doc.com.'), 'width': '620', 'height': '349'}) }}
             </a>
           </p>
-        {# Hide the interactive embed
-          <div id="video-donottrack" class="modal-video-wrap ratio-4x3">
-            <iframe class="modal-video-frame" frameborder="0" allowfullscreen></iframe>
-          </div>
-        #}
         </div>
         <figcaption>
           <p>
-            {{ _('To get a good look at how tracking works, be sure to check out the first episode of Brett Gaylor’s documentary series, <a href="{url}"><cite>Do Not Track</cite></a>.').format(url='https://donottrack-doc.com/')|safe }}
+            {{ _('To get a good look at how tracking works, be sure to check out the first episode of Brett Gaylor’s documentary series, <a href="{url}"><cite>Do Not Track</cite></a>.').format(url='https://episode1.donottrack-doc.com/')|safe }}
           </p>
         </figcaption>
       </figure>
