--- a/bedrock/mozorg/templates/mozorg/mpl/headers/index.html
+++ b/bedrock/mozorg/templates/mozorg/mpl/headers/index.html
@@ -21,22 +21,22 @@
     <p>This page gives copy-and-pasteable license headers for Mozilla code. When adding license headers to new files to be checked in to the Mozilla source tree, always use the appropriate one of the following.</p>
     <h2>MPL 2</h2>
     <p>This license must be used for all new code, unless the containing project, module or externally-imported codebase uses a different license. If you can't put a header in the file due to its structure, please put it in a LICENSE file in the same directory.</p>
-<pre>
+<pre id="mpl-c">
 /* This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 </pre>
-<pre>
+<pre id="mpl-python">
 # This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 </pre>
-<pre>
+<pre id="mpl-html">
 &lt;!-- This Source Code Form is subject to the terms of the Mozilla Public
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at http://mozilla.org/MPL/2.0/. --&gt;
 </pre>
-<pre>
+<pre id="mpl-text">
 This Source Code Form is subject to the terms of the Mozilla Public
 License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -46,19 +46,19 @@ file, You can obtain one at http://mozilla.org/MPL/2.0/.
   <section>
     <h2>Public Domain</h2>
     <p>This license can be used for test scripts and other short code snippets, at the discretion of the author.</p>
-<pre>
+<pre id="pd-c">
 /* Any copyright is dedicated to the Public Domain.
  * http://creativecommons.org/publicdomain/zero/1.0/ */
 </pre>
-<pre>
+<pre id="pd-python">
 # Any copyright is dedicated to the Public Domain.
 # http://creativecommons.org/publicdomain/zero/1.0/
 </pre>
-<pre>
+<pre id="pd-html">
 &lt;!-- Any copyright is dedicated to the Public Domain.
    - http://creativecommons.org/publicdomain/zero/1.0/ --&gt;
 </pre>
-<pre>
+<pre id="pd-text">
 Any copyright is dedicated to the Public Domain.
 http://creativecommons.org/publicdomain/zero/1.0/
 </pre>
