--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -985,7 +985,7 @@ html[lang|="en"] {
 /****************************************************************************/
 // Gear
 .promo-large-landscape.gear {
-    background: #95368c; // purple
+    background: #6FBE4A; // green
 
     h2 {
         padding: 100px @baseLine 0 @baseLine;
@@ -1128,7 +1128,7 @@ html[lang|="en"] {
 /****************************************************************************/
 // Firefox iOS
 .promo-large-portrait.firefox-ios {
-    background: #e55525; // orange
+    background: #00659a; // dark blue
 
     h2 {
         padding-top: 180px;
