--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -449,6 +449,10 @@
   <button id="scroll-prompt">{{ _('Discover more') }}</button>
 </main>
 
+{% if waffle.switch('fundraiser-home-takeover') and l10n_has_tag('eoy_fundraising_takeover') %}
+  {% include 'mozorg/home/includes/fundraising/takeover.html' %}
+{% endif %}
+
 {% include 'firefox/includes/schemaorg-app.html' %}
 
 {% endblock %}
