Bug 1224565 - Fix: Add pdf url

--- a/bedrock/foundation/templates/foundation/annualreport/2014/faq.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2014/faq.html
@@ -215,8 +215,8 @@
             </dt>
             <dd>
               <p>
-              {% trans %}
-                Innovation stems from different ways of solving problems. It is crucial to us to maintain a diverse workforce to fuel those different approaches. Mozilla has elected to voluntarily and transparently share the information in its filing of the Employer Information Report (EEO-1) to the U.S. Equal Employment Opportunity Commission. This information reflects our U.S. Corporation employees only. Sharing it is an important step we are taking to improve diversity and inclusion at Mozilla and in the technology industry.
+              {% trans url="https://static.mozilla.com/moco/en-US/pdf/Mozilla-2015-EE0-1.pdf" %}
+                Innovation stems from different ways of solving problems. It is crucial to us to maintain a diverse workforce to fuel those different approaches. Mozilla has elected to voluntarily and transparently share the information in its filing of the Employer Information Report <a href="{{ url }}">(EEO-1)</a> to the U.S. Equal Employment Opportunity Commission. This information reflects our U.S. Corporation employees only. Sharing it is an important step we are taking to improve diversity and inclusion at Mozilla and in the technology industry.
               {% endtrans %}
               </p>
             </dd>
