Fix Bug 1227250, replace all instances of sendto donate links with donate.

--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -17,7 +17,7 @@
     (url('foundation.about'), 'about', 'About the Foundation'),
     (url('foundation.annualreport'), 'report', 'Annual Report'),
     ('https://careers.mozilla.org/', 'careers', 'Careers'),
-    ('https://sendto.mozilla.org/', 'donate', 'Donate'),
+    (donate_url('foundation_nav'), 'donate', 'Donate'),
     (url('foundation.licensing'), 'licensing', 'Licensing & Trademarks'),
     (url('foundation.documents.index'), 'documents', 'Public Documents'),
 ] %}
