--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -59,7 +59,7 @@
 
   <p>
     {% trans
-      donate="https://sendto.mozilla.org/",
+      donate=donate_url('foundation'),
       contribute=url('mozorg.contribute')
     %}
       If you're interested in supporting our efforts, please consider getting
