--- a/bedrock/grants/templates/grants/base.html
+++ b/bedrock/grants/templates/grants/base.html
@@ -31,7 +31,7 @@
 
             <p>We're a non-profit organization working to build a Web that is open, accessible, safe and — most of all — a force for good.</p>
             <p>Mozilla builds communities and gives people tools to control their online experience. We are about enriching people's lives instead of  benefiting shareholders. We believe a better Web means a happier future for all of us — and we depend on your collaboration and financial support to build it.</p>
-            <p>So please consider making a donation today: <a href="https://sendto.mozilla.org/page/contribute/join-mozilla">Join us here</a>.</p>
+            <p>So please consider making a donation today: <a href="{{ donate_url('grants') }}">Join us here</a>.</p>
             {% endblock %}
         </aside>
 
