--- a/bedrock/mozorg/templates/mozorg/contribute/index.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/index.html
@@ -124,7 +124,7 @@
       <p class="section-tagline">{{ _('Here are a few other ways you can support Mozilla right now.') }}</p>
       <ul class="other-actions">
         <li>
-          <a href="https://sendto.mozilla.org/page/contribute/Give-Now?source=mozillaorg&amp;ref=volunteer_getinvolvedpage201410&amp;utm_campaign=volunteer_getinvolvedpage201410&amp;utm_source=mozillaorg&amp;utm_medium=referral" class="other-donate" data-label="Donate to Mozilla">{{ _('Donate to Mozilla') }}</a>
+          <a href="{{ donate_url('contribute') }}" class="other-donate" data-label="Donate to Mozilla">{{ _('Donate to Mozilla') }}</a>
         </li>
         <li>
           <a href="{{ url('firefox') }}" class="other-download" data-label="Download Firefox">{{ _('Download Firefox') }}</a>
@@ -150,4 +150,3 @@
   </section>
 
 {% endblock contrib_content %}
-
