--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -1073,7 +1073,8 @@ html[lang|="en"] {
 
     h2 {
         padding-top: 30px;
-        .font-size(32px);
+        .font-size(27px);
+        line-height: 1.2;
     }
 
     h2:before {
@@ -1088,6 +1089,7 @@ html[lang|="en"] {
 
     h3 {
         padding-top: 90px;
+        .font-size(24px);
     }
 
     .secondary {
@@ -1105,6 +1107,28 @@ html[lang|="en"] {
     }
 }
 
+html[lang="de"],
+html[lang="pt-BR"],
+html[lang="es-ES"],
+html[lang="nl"],
+html[lang="ca"] {
+    .promo-large-landscape.fundraiser {
+        h2 {
+            .font-size(24px);
+        }
+    }
+}
+
+html[lang="pt-BR"],
+html[lang="es-ES"],
+html[lang="nl"],
+html[lang="ca"] {
+    .promo-large-landscape.fundraiser {
+        h3 {
+            .font-size(21px);
+        }
+    }
+}
 
 /****************************************************************************/
 // MDN 10th Anniversary
