[fix bug 1228138] Add SOM 2014 link to /foundation/documents

--- a/bedrock/foundation/templates/foundation/documents/index.html
+++ b/bedrock/foundation/templates/foundation/documents/index.html
@@ -162,6 +162,14 @@
         <li><a href="https://static.mozilla.com/moco/en-US/pdf/Mozilla_Audited_Financials_2013.pdf">{{ _('2013 Audited financial statements') }}</a></li>
       </ul>
     </li>
+    <li>{{ _('2014 filings and related documents') }}
+      <ul>
+        <li>{{ _('2014 annual report:') }} <q><a href="{{ url('foundation.annualreport.2014.index') }}">{{ _('State of Mozilla 2014') }}</a></q></li>
+        <li><a href="{{ url('foundation.annualreport.2014.faq') }}">{{ _('Mozilla 2014 financial FAQ') }}</a></li>
+        <li><a href="https://static.mozilla.com/moco/en-US/pdf/2014_Mozilla_Foundation_Fed_990_Public_Disclosure.pdf">{{ _('2014 Form 990') }}</a></li>
+        <li><a href="https://static.mozilla.com/moco/en-US/pdf/Mozilla_Audited_Financials_2014.pdf">{{ _('2014 Audited financial statements') }}</a></li>
+      </ul>
+    </li>
   </ul>
 
 {% endblock %}
