[fix bug 1228566] Broken phone links on /firefox/os/devices page

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -73,7 +73,7 @@
         <div class="provider" data-country="gr">
           <h3>{{_('Greece')}}</h3>
           <ul>
-            <li><a class="cosmote" href="http://www.cosmote.gr/cosmoportal/cosmote.portal?_nfpb=true&_pageLabel=HDV&sku=20294895">Alcatel One Touch Fire C</a></li>
+            <li><a class="cosmote" href="https://www.cosmote.gr/mobile/cosmoportal/cosmote.portal?_nfpb=true&amp;_pageLabel=HDV&amp;sku=20290034&amp;s=0">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
         <div class="provider" data-country="gt">
@@ -85,7 +85,7 @@
         <div class="provider" data-country="hu">
           <h3>{{_('Hungary')}}</h3>
           <ul>
-            <li><a class="t-mobile" href="https://www.telekom.hu/shop/site/pages/mainProduct.jsp?productId=prod3580023&krypto=7xDXFZuJa24%3D&contractType=newPostpaid">Alcatel One Touch Fire E</a></li>
+            <li><a class="t-mobile" href="https://www.telekom.hu/shop/termek/ALCATEL+onetouch+Fire+E+6015--ALCOTFIREE6015SLSLT?contractType=newPostpaid&amp;commitmentPeriod=12&amp;preselectedTariffplanId=prod3220038">Alcatel One Touch Fire E</a></li>
           </ul>
         </div>
         <div class="provider" data-country="in">
@@ -105,7 +105,7 @@
         <div class="provider" data-country="ke">
           <h3>{{ _('Kenya') }}</h3>
           <ul>
-            <li><a class="orange" href="http://orange.co.ke/klif/">Orange</a></li>
+            <li><a class="orange" href="http://www.orange.co.ke/en/product/orange-klif/">Orange</a></li>
           </ul>
         </div>
         <div class="provider" data-country="lu">
