--- a/bedrock/mozorg/templates/mozorg/home/includes/fundraising/takeover.html
+++ b/bedrock/mozorg/templates/mozorg/home/includes/fundraising/takeover.html
@@ -34,6 +34,7 @@
          </label>
 
          <input type="hidden" name="currency" value="{{ donate_params.currency }}" />
+         <input type="hidden" name="presets" value="{{ donate_params.presets }}" />
          <input type="submit" value="{{ _('Donate Now') }}" />
        </fieldset>
      </form>
