--- a/media/css/mozorg/home/takeover.less
+++ b/media/css/mozorg/home/takeover.less
@@ -2,6 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+/*! 2015-12-02 */
+
 @import "../../sandstone/lib.less";
 
 @mozRed: #c33d32;
